# normcontrol

./: .env.example  .gitignore  README.md  pyproject.toml  reference_examples.json
nodes/: init_dag_run.py  names_dqc.py  visualization_output_pdf.py
nodes/detection_document_structure/: main.py
nodes/detection_document_structure/configs/: main.yaml
nodes/detection_document_structure/configs/extra/: default.yaml
nodes/parsing_pdf/: main.py
nodes/parsing_pdf/configs/: parsing_pdf.yaml
references_normcontrol/: docx_context.py  docx_references.py  docx_to_pdf.py  docx_tracked_editing.py  gigachat_reference_editor.py  llm_utils.py  pdf_docx_reference_mapping.py  pdf_pipeline.py  reference_agent.py  reference_report_visualization.py  references_validation.py  run_docx_editing.py  run_normcontrol.py  run_references_validation.py
src/: constants.py  detection_content.py  detection_document_structure.py  detection_page_elements.py  errors.py  paths.py  pdf2npy.py  protocols.py  structures.py  validation_headers.py  validation_structure.py  visualize.py
src/models/: abstract_text_extraction.py  fake_text_extraction.py  model_text_extraction.py
src/models/elements_detection/: abstract_element_detection_model.py  yolo_model.py
src/tools/: debuging.py  detection_caption_helper.py  detection_captions.py  progress_tracker.py  reading.py  summary_visualization.py  tools.py  utils.py  validation_captions.py  validation_references.py  validation_text.py
src/tools/validation/: __init__.py  captions.py  helpers.py  schemas.py
(+3 files in other folders)
