[project]
name = "literature-normcontrol-research"
version = "0.1.0"
description = "Research prototype for references validation and DOCX Track Changes editing."
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "pandas>=2.3.1,<3",
    "pymupdf>=1.26.3,<2",
    "numpy>=2.3.2,<3",
    "pydantic>=2.11.7,<3",
    "pyyaml>=6.0.2,<7",
    "rich>=14.1.0,<15",
    "tqdm>=4.67.1,<5",
    "spacy>=3.8.7,<4",
    "aiobotocore[boto3]>=2.23.2,<3",
    "uvicorn>=0.35.0,<0.36",
    "natasha>=1.6.0,<2",
    "hydra-core>=1.3.2",
    "pillow>=12.1.0",
    "opencv-python>=4.13.0.90",
    "pika>=1.3.2",
    "multipledispatch>=1.0.0",
    "python-docx>=1.2.0",
    "gigachat>=0.2.1",
    "docx2pdf>=0.1.8",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7,<0.10",
    "pytest>=8.3.4,<9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
